@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.485 2005/11/16 15:03:34 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.486 2005/11/18 02:55:59 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  17 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  call ls with '-1 --color=no'
 
   16 Nov 2005; Preston Cody <codeman@gentoo.org>
 	added warning (#9) to GRP ppl about stage3 tarballs
